# MICHALIK

./: .gitignore  README.md
MFinals/AI Framework Troubleshooter/: README.md  main.py  pyproject.toml
MFinals/AI Framework Troubleshooter/db/: upsert.py  weaviate_client.py
MFinals/AI Framework Troubleshooter/docs/: langchain.md
MFinals/AI Framework Troubleshooter/generator/: llm_runner.py  prompt_template.py  rag_pipeline.py
MFinals/AI Framework Troubleshooter/retriever/: chunker.py  docs_scraper.py  embedder.py  github_fetcher.py  stackoverflow_fetcher.py  version_detector.py
MFinals/AI Framework Troubleshooter/utils/: config.py  web_search.py
MFinals/AI Framework Troubleshooter/zml/: run_pipeline.py
MFinals/AI Framework Troubleshooter/zml/analysis/src/: __init__.py  bivariate_analysis.py  multivariate_analysis.py
MFinals/AI Framework Troubleshooter/zml/pipelines/: training_pipeline.py
MFinals/AI Framework Troubleshooter/zml/src/: data_splitter.py  feature_engineering.py  handle_missing_values.py  ingest_data.py  model_building.py  model_evaluator.py
MFinals/AI Framework Troubleshooter/zml/steps/: feature_engineering_step.py  outlier_detection_step.py  predictor.py
MFinals/Forecasting Rossmann Store Sales/: .gitignore  @TODO  README.md  main.py  model.py  pyproject.toml  requirements.txt
MFinals/rossmann-sales-forecasting/: .copier-answers.yml  run.py
Machine Learning/: README.md
Machine Learning/01_Laptop Price Predictor/: app.py  main.ipynb
Machine Learning/02_Stores Demand Forecasting/: main.ipynb
Machine Learning/03_Predicting Employee Attrition/: main.ipynb
Machine Learning/04_Heart Disease Detection/: main.ipynb
Machine Learning/05_Predicting Student Exam Scores/: best_student_performance_model.pkl  main.ipynb
Machine Learning/06_Insurance Premium Prediction/: main.ipynb
Machine Learning/07_Stock Trend Prediction/: BTC-USD.csv  main.ipynb
Machine Learning/08_Fraud Detection/: fraud_detection_model.pkl  main.ipynb
Machine Learning/09_Credit Score Prediction/: credit_score_model.pkl  main.ipynb
Machine Learning/Data Analysis/: main.ipynb
Machine Learning/Data Visualization/: main.ipynb
Retrieval-Augmented-Generation/: README.md
Retrieval-Augmented-Generation/04_Rag_Application_with_FAISS/: README.md  main.py  pyproject.toml
Retrieval-Augmented-Generation/05_Rag_with_Weviate_and_Mistral_AI/: README.md  main.py  pyproject.toml
Retrieval-Augmented-Generation/06_LLM-Powered RAG with LlamaIndex/: README.md  pyproject.toml
Retrieval-Augmented-Generation/08_RAG_Pipeline_Using_Haystack/: README.md  main.py  pyproject.toml
Retrieval-Augmented-Generation/10_RAG_with_GGemma_and_VectorMongoDB/: README.md  main.py  pyproject.toml
azure/: README.md
structures/: README.md  StackREADME.md
(+97 files in other folders)
