[project]
name = "06-rag-by-llama"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "llama-index>=0.12.44",
    "llama-index-embeddings-huggingface>=0.5.5",
    "llama-index-embeddings-instructor>=0.3.0",
    "llama-index-llms-huggingface>=0.5.0",
    "python-dotenv>=1.1.1",
]
