[project]
name = "10-rag-with-ggemma-and-vectormongodb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "accelerate>=1.8.1",
    "datasets>=3.6.0",
    "pandas>=2.3.0",
    "pymongo>=4.13.2",
    "sentence-transformers>=5.0.0",
    "transformers>=4.53.0",
]
